# google-a2a-adk-multi-agent-demo

./: .gitignore  PROJECT.md  README.md  TEMP.MD  __patch_agent_state.py  __patch_sidebar_agentstate.py  pyproject.toml  todo.md
calendar_agent/: __main__.py  agent.py  agent_executor.py  create_event_tool.py  delete_event_tool.py  list_events_tool.py  search_events_tool.py  update_event_tool.py
del/: README.md
gmail/: __main__.py  agent.py  agent_executor.py  attachment_tool.py  email_details_tool.py  gmail_tool.py  search_tool.py  send_email_tool.py
host_agent_adk/host/: agent.py
porch/: __main__.py  api.py  auth.py  main.py  proxy.py  settings.py
tasks_agent/: __main__.py  agent.py  agent_executor.py  complete_task_tool.py  create_task_tool.py  delete_task_tool.py  list_tasklists_tool.py  list_tasks_tool.py  update_task_tool.py
website/: auth_server.py  oauth_flow_demo.py  todo.md
website/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
website/frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
website/frontend/src/components/: ChatLog.tsx  Composer.tsx  Inspector.tsx  Sidebar.tsx  StatusBar.tsx
